Fixed spacing issues

--- a/assets/css/_index.scss
+++ b/assets/css/_index.scss
@@ -111,6 +111,8 @@ section.product-images{
 
 section.about-us{
     width: 100%;
+    margin-top: -50px;
+    margin-bottom: 50px;
 
     .content-wrapper{
         width: 100%;
@@ -167,7 +169,7 @@ section.about-us{
 
 section.trending{
     width: 100%;
-    margin: 50px 0;
+    margin: 100px 0;
 
     .center-div{
         overflow-x: hidden;
@@ -184,7 +186,7 @@ section.trending{
 
     .trending-slider{
         width: 100%;
-        margin-top: 20px;
+        margin-top: 40px;
 
         .swiper-wrapper{
 
@@ -261,7 +263,8 @@ section.trending{
 // Testimonials
 
 section.testimonial{
-    margin: 100px 0;
+    margin: 120px 0;
+    margin-bottom: 100px;
     width: 100%;
     overflow-x: hidden;
 
@@ -275,7 +278,7 @@ section.testimonial{
     }
 
     .testimonial-slider{
-        margin-top: 20px;
+        margin-top: 40px;
 
         .swiper-wrapper{
 
@@ -310,7 +313,7 @@ section.testimonial{
                     }
 
                     .text-wrapper{
-                        padding: 30px;
+                        padding: 50px 30px;
                         width: 100%;
                         display: flex;
                         flex-direction: column;
@@ -330,11 +333,14 @@ section.testimonial{
                             justify-content: center;
 
                             img{
+                                width: 15px;
+                                height: 15px;
                                 margin: 0 2.5px;
                             }
                         }
 
                         p{
+                            max-width: 480px;
                             text-align: center;
                             color: $CY-DarkGrey;
                             font-size: 22px;
@@ -409,7 +415,7 @@ section.recommended-products{
     }
 
     p{
-        margin: 20px auto;
+        margin: 30px auto;
         text-align: center;
         font-size: 22px;
         line-height: 141%;
@@ -440,7 +446,7 @@ section.recommended-products{
 
 section.features{
     margin: 100px 0px;
-    margin-bottom: 0;
+    margin-bottom: -20px;
 
     .features-wrapper{
         display: flex;
