--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -539,6 +539,8 @@ section.product-images .image-slider .swiper-wrapper .swiper-slide .image-wrappe
 }
 section.about-us {
   width: 100%;
+  margin-top: -50px;
+  margin-bottom: 50px;
 }
 section.about-us .content-wrapper {
   width: 100%;
@@ -603,7 +605,7 @@ section.about-us .content-wrapper .image-wrapper img {
 
 section.trending {
   width: 100%;
-  margin: 50px 0;
+  margin: 100px 0;
 }
 section.trending .center-div {
   overflow-x: hidden;
@@ -617,7 +619,7 @@ section.trending h1 span {
 }
 section.trending .trending-slider {
   width: 100%;
-  margin-top: 20px;
+  margin-top: 40px;
 }
 section.trending .trending-slider .swiper-wrapper .swiper-slide .card-wrapper {
   display: flex;
@@ -696,7 +698,8 @@ section.trending .trending-slider .swiper-wrapper .swiper-slide .card-wrapper .b
 }
 
 section.testimonial {
-  margin: 100px 0;
+  margin: 120px 0;
+  margin-bottom: 100px;
   width: 100%;
   overflow-x: hidden;
 }
@@ -708,7 +711,7 @@ section.testimonial h1 span {
   font-weight: 800;
 }
 section.testimonial .testimonial-slider {
-  margin-top: 20px;
+  margin-top: 40px;
 }
 section.testimonial .testimonial-slider .swiper-wrapper .swiper-slide .card-wrapper {
   background: rgba(255, 243, 132, 0.3);
@@ -737,7 +740,7 @@ section.testimonial .testimonial-slider .swiper-wrapper .swiper-slide .card-wrap
      object-fit: cover;
 }
 section.testimonial .testimonial-slider .swiper-wrapper .swiper-slide .card-wrapper .text-wrapper {
-  padding: 30px;
+  padding: 50px 30px;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -756,9 +759,12 @@ section.testimonial .testimonial-slider .swiper-wrapper .swiper-slide .card-wrap
   justify-content: center;
 }
 section.testimonial .testimonial-slider .swiper-wrapper .swiper-slide .card-wrapper .text-wrapper .review-stars img {
+  width: 15px;
+  height: 15px;
   margin: 0 2.5px;
 }
 section.testimonial .testimonial-slider .swiper-wrapper .swiper-slide .card-wrapper .text-wrapper p {
+  max-width: 480px;
   text-align: center;
   color: #3D3D3D;
   font-size: 22px;
@@ -815,7 +821,7 @@ section.recommended-products h1 span {
   font-weight: 800;
 }
 section.recommended-products p {
-  margin: 20px auto;
+  margin: 30px auto;
   text-align: center;
   font-size: 22px;
   line-height: 141%;
@@ -841,7 +847,7 @@ section.recommended-products .product-wrapper .product img {
 
 section.features {
   margin: 100px 0px;
-  margin-bottom: 0;
+  margin-bottom: -20px;
 }
 section.features .features-wrapper {
   display: flex;
